2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* compress.c (write_data): Return ssize_t.
	(init_compression) Init zs.zalloc and zs.zfree with NULL.
	(compress_file) Changed rdamt, wramt to size_t. Changed 
	rtval to ssize_t. Added local variable num_written.
	Added missing casts. Added checks if num_written is -1.
	(init_inflation) Init zs.zalloc and zs.zfree with NULL.
	(inflate_file) Changed rdamt to size_t. Added local
	variable num_pushed. Added missing casts. Use new local
	vars num_written and num_to_write. Added checks if 
	num_written is -1. Exit if pushback fails.
	(ez_inflate_str) Changed rdamt to size_t. Added missing 
	casts. Changed fprintf format string to use unsigned longs, 
	and added casts for parameters.
	(hrd_inflate_str) Changed rdamt and i to size_t.
	Added local variable num_pushed. Added missing casts.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (fastjar_SOURCES): Moved jartool.h ...
	(libfastjar_convenience_la_SOURCES) ... to here.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* dostime.c (dos2unixtime): Added casts to int.
	(unix2dostime) Added casts to ub4.
	* dostime.h (dos2unixtime, unix2dostime): Changed
	prototypes to use ub4 instead of unsigned long.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (extract_jar): Changed rdamt to size_t.
	* pushback.c (pb_push): Changed in_amt, wrap to size_t.
	Added a size_t cast, and removed an int cast. 
	(pb_read) Changed out_amt, wrap, tmp to size_t.
	Added a size_t cast, and removed an int cast.
	Added new variable num_read.
	* pushback.h (pb_push, pb_read): Changed prototypes
	to use size_t.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* shift.c (shift_down): Changed off to off_t.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* shift.c (shift_up, shift_down): Changed len to size_t.
	Use new variable num_read to count read bytes.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac, README, NEWS: Bump version number to 0.96-pre.