@@ -276,7 +276,7 @@ static char *extract_line(const char *stream, regoff_t begin, regoff_t end, int 
 	for(e = end; stream[e] == '\t' || !iscntrl((unsigned char)stream[e]); e++);
 	length = e - *b;
 	if((retstr = (char *) malloc(length + 1))) {
-		sprintf(retstr, "%d:", *b);
+		snprintf(retstr, length + 1, "%d:", *b);
 		strncpy(retstr, &(stream[*b]), length);
 		retstr[length] = '\0';
 	}
